; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqsignal.c_pqsignal_pm.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqsignal.c_pqsignal_pm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { i64, i32, i32 }

@SIG_IGN = common dso_local global i64 0, align 8
@SIG_DFL = common dso_local global i64 0, align 8
@SA_RESTART = common dso_local global i32 0, align 4
@BlockSig = common dso_local global i32 0, align 4
@SIG_ERR = common dso_local global i64 0, align 8
@SA_NOCLDSTOP = common dso_local global i32 0, align 4
@SIGCHLD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pqsignal_pm(i32 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.sigaction, align 8
  %7 = alloca %struct.sigaction, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %6, i32 0, i32 0
  store i64 %8, i64* %9, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @SIG_IGN, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %17, label %13

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @SIG_DFL, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %22

17:                                               ; preds = %13, %2
  %18 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %6, i32 0, i32 2
  %19 = call i32 @sigemptyset(i32* %18)
  %20 = load i32, i32* @SA_RESTART, align 4
  %21 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %6, i32 0, i32 1
  store i32 %20, i32* %21, align 8
  br label %26

22:                                               ; preds = %13
  %23 = load i32, i32* @BlockSig, align 4
  %24 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %6, i32 0, i32 2
  store i32 %23, i32* %24, align 4
  %25 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %6, i32 0, i32 1
  store i32 0, i32* %25, align 8
  br label %26

26:                                               ; preds = %22, %17
  %27 = load i32, i32* %4, align 4
  %28 = call i64 @sigaction(i32 %27, %struct.sigaction* %6, %struct.sigaction* %7)
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %26
  %31 = load i64, i64* @SIG_ERR, align 8
  store i64 %31, i64* %3, align 8
  br label %35

32:                                               ; preds = %26
  %33 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %7, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  store i64 %34, i64* %3, align 8
  br label %35

35:                                               ; preds = %32, %30
  %36 = load i64, i64* %3, align 8
  ret i64 %36
}

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i64 @sigaction(i32, %struct.sigaction*, %struct.sigaction*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
